--- a/css/styles.css
+++ b/css/styles.css
@@ -23,9 +23,16 @@ img {
 
 }
 .container {
-  max-width: 1158px;
+  /* max-width: 1158px;
   padding: 0 15px;
-  margin: 0 auto;
+  margin: 0 auto; */
+  max-width: 320px;
+  width: 100%;
+  padding-left: 16px;
+  padding-right: 16px;
+   margin: 0 auto;
+  /* margin-left: auto;
+  margin-right: auto; */
 }
 
 /* HEADER */
@@ -326,17 +333,22 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
  /* SECTION A */
 .capabilities {
-  padding-top: 120px;
-  padding-bottom: 120px;
+  /* padding-top: 120px;
+  padding-bottom: 120px; */
+  padding-top: 96px;
+  padding-bottom: 96px;
 }
 .capabilities-list {
   display: flex;
-  gap: 24px;
+  flex-wrap: wrap;
+  /* gap: 24px; */
+  gap: 72px;
 }
 .capabilities-item {
-  width: calc((100% - 72px) / 4);
+  /* width: calc((100% - 72px) / 4); */
+  width: 100%;
 }
-.images-capabilities {
+/* .images-capabilities {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -346,16 +358,24 @@ border-radius: 4px;
 width: 264px;
 height: 112px;
 margin-bottom: 8px;
+} */
+.images-capabilities {
+  display: none;
 }
 
-.icon-cap {
+/* .icon-cap {
   margin: 0 auto;
-}
+} */
 /* SECTION OUR TEAM */
 .name {
   background: #f4f4fd;
-  padding-top: 120px;
-  padding-bottom: 120px;
+  /* padding-top: 120px;
+  padding-bottom: 120px; */
+  padding-top: 96px;
+  padding-bottom: 96px;
+  /* padding-left: 28;
+  padding-right: 28px;
+   */
 }
 
 .name-section {
@@ -376,29 +396,50 @@ margin-bottom: 8px;
 }
 
 .names {
-  text-transform: capitalize;
+  /* text-transform: capitalize;
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
-  margin-bottom: 8px;
+  margin-bottom: 8px; */
+  font-weight: 700;
+font-size: 36px;
+line-height: 1.11;
+letter-spacing: 0.02em;
+text-align: center;
+color: #2e2f42;
+ margin-bottom: 8px;
 }
 
 .section-text {
-  font-size: 16px;
+  /* font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
-  margin-bottom: 8px;
+  margin-bottom: 8px; */
+  font-weight: 500;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.02em;
+color: #434455;
+}
+
+.name-list {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  gap: 24px;
+  /* gap: 72px; */
 }
 
 .foto-fon {
   border-radius: 0 0 4px 4px;
   background: #fff;
-  width: calc((100% - 72px) / 4);
+  /* width: calc((100% - 72px) / 4); */
   box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 background: #fff;  
+width: 100%;
 }
 
 .social-item .link {
@@ -442,15 +483,8 @@ border: 1px solid #e7e9fc;
 border-top: none;
 }
 
-.name-list {
-  display: flex;
-  align-items: center;
-  gap: 24px;
-}
-
 .portfolio-list {
   display: flex;
-  flex-wrap: wrap;
   column-gap: 24px;
   row-gap: 48px;
 }
@@ -726,4 +760,121 @@ width: 16px;
   border: none;
   fill: #F4F4FD;
   background-color: #404BBF;
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    max-width: 768px;
+    padding-left: 16px;
+  padding-right: 16px;
+  margin: 0 auto;
+  }
+  /* SECTION A */
+  .capabilities-item {
+  width: calc((100% - 24px) / 2);
+}
+  
+  .capabilities-list {
+   column-gap: 24px;
+  row-gap: 72px;
+  }
+  /* SECTION OUR TEAM */
+  .name {
+    padding-left: 108px;
+    padding-right: 108px;
+  }
+  .foto-fon {
+  width: calc((100% - 24px) / 2);
+}
+.name-list {
+  column-gap: 24px;
+  row-gap: 64px;
+}
+.names {
+  text-align: left;
+  /* text-transform: capitalize;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #2e2f42; */
+} 
+}
+
+@media screen and (min-width: 1158px) {
+  .container {
+    max-width: 1158px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin: 0 auto;
+  }
+  /* SECTION A */
+  .capabilities {
+     padding-top: 120px;
+  padding-bottom: 120px; 
+  }
+  .capabilities-list {
+    /* display: flex; */
+    gap: 24px;
+  }
+  .capabilities-item {
+  width: calc((100% - 72px) / 4);
+}
+.images-capabilities {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #f4f4fd;
+  border: 1px solid #8e8f99;
+border-radius: 4px;
+width: 264px;
+height: 112px;
+margin-bottom: 8px;
+}
+.icon-cap {
+  margin: 0 auto;
+}
+/* .names {
+  text-transform: capitalize;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+  text-align: left;
+}  */
+.section-text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #434455;
+  margin-bottom: 8px;
+}
+/* SECTION OUR TEAM */
+.name {
+  padding-top: 120px;
+  padding-bottom: 120px;
+  padding-left: 0px;
+    padding-right: 0px;
+}
+.foto-fon {
+  width: calc((100% - 72px) / 4);
+}
+.name-list {
+  /* flex-wrap: nowrap; */
+  gap: 24px;
+}
+.names {
+  text-transform: capitalize;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+  text-align: center;
+} 
+/* .names-text {
+   text-align: center;
+} */
 }
