--- a/css/styles.css
+++ b/css/styles.css
@@ -137,7 +137,24 @@ display: block;
 .banner {
   background: #2e2f42;
 }
-
+/* MOBILE MENU */
+.mobile-menu {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #FFFFFF;
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.mobile-menu.is-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
+}
 /* FOOTER */
 .footer-page {
   padding-top: 96px;
@@ -867,14 +884,17 @@ width: 16px;
   /* margin-left: auto; */
 }
 .address-list {
-  display: block;
-  /* flex-direction: column; */
+  /* display: block; */
+  flex-direction: column;
   gap: 12px;
 }
 .adress-link {
   font-size: 14px;
   line-height: 1.17;
   letter-spacing: 0.04em;
+}
+.mobile-menu {
+  display: none;
 }
 
   /* SECTION A */
@@ -975,6 +995,7 @@ width: 16px;
   }
   .address-list {
   display: flex;
+  flex-direction: unset;
   align-items: center;
   gap: 40px;
 }
@@ -988,6 +1009,9 @@ padding: 24px 0;
 .burger-btn {
   display: none;
 }
+/* .mobile-menu {
+  display: none;
+} */
   /* SECTION A */
   .capabilities {
      padding-top: 120px;
@@ -1080,6 +1104,7 @@ margin-bottom: 8px;
 .footer-container {
   display: flex;
   flex-wrap: nowrap;
+  gap: 0;
   align-items: baseline;
 }
 .footer-head {
