--- a/css/styles.css
+++ b/css/styles.css
@@ -432,7 +432,7 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     rgba(46, 47, 66, 0.7),
     rgba(46, 47, 66, 0.7)
   ),
-  url(../images/Dark-bg-mob.jpg);
+  url(../images/hero/Dark-bg-mob.jpg);
   background-repeat: no-repeat;
   margin: 0 auto;
   background-position: center center;
@@ -516,15 +516,18 @@ margin-bottom: 8px;
   margin: 0 auto;
 } */
 /* SECTION OUR TEAM */
+.container-adapt {
+  padding-left: 28px;
+  padding-right: 28px;
+}
 .name {
   background: #f4f4fd;
   /* padding-top: 120px;
   padding-bottom: 120px; */
   padding-top: 96px;
   padding-bottom: 96px;
-  /* padding-left: 28;
-  padding-right: 28px;
-   */
+  /* padding-left: 28px;
+  padding-right: 28px;   */
 }
 
 .name-section {
@@ -910,6 +913,9 @@ font-size: 12px;
 line-height: 1.17;
 letter-spacing: 0.04em;
 color: #8e8f99;
+
+display: flex;
+align-items: center;
 }
 .check-link {
   line-height: 1.33;
@@ -923,6 +929,7 @@ border: 1px solid rgba(46, 47, 66, 0.4);
 width: 16px;
   height: 16px;
   margin-right: 12px;
+  flex-shrink: 0;
   display: inline-flex;
   align-items: center;
   justify-content: center;
@@ -979,13 +986,13 @@ width: 16px;
 .banner {
   padding-top: 112px;
   padding-bottom: 112px;
-  padding-left: 136px;
-  padding-right: 136px;
+  /* padding-left: 136px;
+  padding-right: 136px; */
   background-image: linear-gradient(
     rgba(46, 47, 66, 0.7),
     rgba(46, 47, 66, 0.7)
   ),
-  url(../images/Dark-bg-tab.jpg);
+  url(../images/hero/Dark-bg-tab.jpg);
 }
 .banner-h {
   font-size: 56px;
@@ -1003,10 +1010,14 @@ width: 16px;
   row-gap: 72px;
   }
   /* SECTION OUR TEAM */
-  .name {
+  .container-adapt {
+  padding-left: 108px;
+  padding-right: 108px;
+}
+  /* .name {
     padding-left: 108px;
     padding-right: 108px;
-  }
+  } */
   .foto-fon {
   width: calc((100% - 24px) / 2);
 }
@@ -1065,6 +1076,20 @@ width: 16px;
   align-items: center;
   /* width: 453px; */
  }
+ /* MODAL VINDOW */
+ 
+.modal {
+  padding: 24px;
+  padding-top: 72px;
+  width: 408px;
+  min-height: 584px;
+}
+.modal-text {
+width: 360px;
+}
+.modal-input {
+padding-left: 38px;
+}
 }
 
 @media screen and (min-width: 1158px) {
@@ -1116,10 +1141,10 @@ padding: 24px 0;
     rgba(46, 47, 66, 0.7),
     rgba(46, 47, 66, 0.7)
   ),
-  url(../images/hero-img.jpg);
+  url(../images/hero/hero-img.jpg);
 } 
 .banner-h {
-  max-width: 496px;
+  /* max-width: 496px; */
   margin-bottom: 48px;
 }
   /* SECTION A */
@@ -1166,11 +1191,15 @@ margin-bottom: 8px;
   margin-bottom: 8px;
 }
 /* SECTION OUR TEAM */
+/* .container-adapt {
+  padding-left: 108px;
+  padding-right: 108px;
+} */
 .name {
   padding-top: 120px;
   padding-bottom: 120px;
-  padding-left: 0px;
-    padding-right: 0px;
+  /* padding-left: 0px;
+    padding-right: 0px; */
 }
 .foto-fon {
   width: calc((100% - 72px) / 4);
@@ -1247,7 +1276,7 @@ margin-bottom: 8px;
  }
  /* MODAL VINDOW */
  
-.modal {
+/* .modal {
   padding: 24px;
   padding-top: 72px;
   width: 408px;
@@ -1258,6 +1287,6 @@ width: 360px;
 }
 .modal-input {
 padding-left: 38px;
-}
+} */
 
 }
